# BEJ

./: .env.example  .gitignore  CLEANUP_COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  Cargo.toml  Config.toml  DOKUMENTACJA TECHNICZNA PROJEKTU BOTA HANDLOWEGO.md  FORMATTING_COMPLETION_LOG.md  Ghost_Architecture.md  ISSUE_10_SUMMARY.md  ISSUE_11_PORT_TEST.md  MULTI_TOKEN_FOUNDATION_SUMMARY.md  PERFORMANCE_AUDIT_REPORT.md  PR_COMPARISON_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  STRATEGIA_TRADINGOWA_I_ALGORYTMY.md  TASK4_IMPLEMENTATION_SUMMARY.md  TASK5_COMPLETION.md  TASK6_EXECUTIVE_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  UNIVERSE_FEATURES_QUICKSTART.md  UNIVERSE_FEATURES_SUMMARY.md  UNIVERSE_IMPLEMENTATION_PLAN.md  WEBSOCKET_QUICK_REFERENCE.md  WEBSOCKET_SECURITY_SUMMARY.md  deny.toml  errors.txt  libnonce_raii_comprehensive_tests.rlib  rust-toolchain.toml
artifacts/: ISSUE_10_FINAL_REPORT.md  ISSUE_10_FINAL_RESULTS.md  MIGRATION_REPORT.md  tests_baseline.json  tests_baseline_summary.txt
benches/: analytics_bench.rs  extractor_bench.rs  prefilter_bench.rs  tx_builder_nonce_bench.rs
docs/: A1_IMPLEMENTATION_SUMMARY.md  A1_QUICK_REFERENCE.md  A1_VERIFICATION.md  A2_FINAL_SUMMARY.md  A2_IMPLEMENTATION_SUMMARY.md  A2_QUICK_REFERENCE.md  A2_VERIFICATION.md  A3_FINAL_SUMMARY.md  A3_IMPLEMENTATION.md  A3_QUICK_REFERENCE.md  A3_SUMMARY.txt  A3_VERIFICATION.md  A4_FINAL_SUMMARY.md  A4_IMPLEMENTATION_SUMMARY.md  A4_QUICK_REFERENCE.md  A4_VERIFICATION.md  ACCEPTANCE_VERIFICATION.md  ACCEPTANCE_VERIFICATION_RAII.md  ACCEPTANCE_VERIFICATION_SOLANA_SDK.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT_RPC_NONCE_REDUNDANCY.md  BENCHMARK_BASELINES.md  BUILD_MATRIX.md  BUNDLER_INTEGRATION_GUIDE.md  BUY_ENGINE_OPTIMIZATIONS.md  CARGO_DENY_COMPLIANCE.md  COMPREHENSIVE_TEST_IMPLEMENTATION.md  CRITICAL_FIXES_SUMMARY.md  ENHANCED_ERROR_HANDLING.md  FEATURE_FLAGS_IMPLEMENTATION.md  FINAL_ACCEPTANCE_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_INTEGRATION_GUIDE.md  FINAL_INTEGRATION_QUICK_REFERENCE.md  FINAL_INTEGRATION_STAGE.md  FINAL_INTEGRATION_VERIFICATION.md  GUI_TASK4_COMPLETION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_RPC_SELF_REGULATION.md  IMPLEMENTATION_COMPLETE_SNIFFER.md  (+61 more)
examples/: README.md  complete_example.rs  final_integration_stage.rs  gui_monitoring.rs  tx_build_output_demo.rs  universe_features_demo.rs  websocket_demo.rs
src/: buy_engine.rs  compat.rs  config.rs  endpoints.rs  lib.rs  main.rs  manual_gui.rs  metrics.rs  observability.rs  position_tracker.rs  security.rs  structured_logging.rs  test_utils.rs  tx_builder.rs  tx_builder_legacy.rs  types.rs  wallet.rs
tests/: bundler_integration_test.rs  feature_flags_test.rs.disabled  price_stream_integration_test.rs  test_compilation.sh  verify_a3.sh  verify_final_integration.sh  verify_sniffer.sh  websocket_integration_test.rs
(+117 files in other folders)
