[package]
name = "bot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# rust-version = "1.83.0"  # Commented: transitive deps require edition2024 (nightly-only as of 1.83)
# See rust-toolchain.toml and MSRV.md for detailed explanation


[features]
default = []
mock-mode = []
# Map features to optional deps (required for cargo to resolve metadata)
pumpfun = ["dep:pumpfun"]
test_utils = []  # Feature flag for test utilities
# ZK proof feature with full zk-SNARKs support
zk_enabled = ["dep:solana-zk-sdk"]
# Performance profiling feature
perf = []
# Production parsing optimizations
prod_parse = []

[dependencies]
# Core async runtime and utilities
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
itertools = "0.14"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
fastrand = "2.2"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# HTTP / rate limiting / retries / logging
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
governor = "0.10"
nonempty = { version = "0.12", features = ["serialize"] }
tokio-retry = "0.3"
log = "0.4"
scopeguard = "1.2"
clap = { version = "4.5", features = ["derive", "env"] }

# Solana + SPL - Pinned to 2.3.x line for consistency
# All solana-* crates MUST use the same version to avoid type mismatch errors
# Using ~2.3.0 to allow patch updates but prevent minor version drift
solana-client = "~2.3.0"
solana-sdk = "~2.3.0"
solana-transaction-status = "~2.3.0"
solana-rpc-client-api = "~2.3.0"
solana-zk-sdk = { version = "~2.3.0", optional = true }
spl-associated-token-account = "~7.0.0"
spl-token = "~6.0.0"

# DEX SDKs (optional)
pumpfun = { version = "4.4.1", features = ["create-ata", "versioned-tx", "close-ata"], optional = true }

# Advanced data structures and concurrency
dashmap = "6.1"
parking_lot = "0.12"
bytes = "1.9"
arc-swap = "1.7"
crossbeam = "0.8"
smallvec = "1.13"
zeroize = "1.8"

# Metrics and observability
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Cryptography and security
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2.1"

# Database and storage
sled = "0.34"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Utils
base64 = "0.22"
eframe = { version = "0.29" }
tempfile = "3.14"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"

# Serialization formats
bincode = "1.3"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"
proptest = "1.5"
mockito = "1.6"





